전자책 다운로드 기능(외부 경로 설정 및 보안 적용)